# gl-wasm-template

./: .gitignore  CMakeLists.txt  README.md
public/: index.js  wasm_app.js  wasm_app.wasm
resources/static/: index.html  index.js  manifest.json  styles.css
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  api_sample.cc  api_sample.h  app.cc  app.h  main.cc
src/cpp/framework/: base_app.cc  base_app.h
src/cpp/framework/api/: lib.cc  lib.h
src/cpp/sample/: main.cc  sample_app.cc  sample_app.h
src/cpp/sample/api/: lib.cc  lib.h
src/js/: index.js
tools/simple_server/: main.py
